--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=jobportal
+server.port=4040
+##My sql configurations
+spring.datasource.url=jdbc:mysql://localhost:3306/jobportal
+spring.datasource.username=jobportal
+spring.datasource.password=jobportal
